--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,13 +22,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+      shell: bash
+
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      run: ./gradlew clean build
+      shell: bash
+
+#    - name : Generate deployment package
+#      run: zip -r ./mys3study.zip .
+#
+#
+#    - name: Deploy Consumer to EB
+#      user: einaregilsson/beanstalk-deploy@v16
+#      with:
+#        aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
+#        aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+#        application_name: my-java-web
+#        environment_name: Myjavaweb-env
+#        version_label : github-action-${{steps.current-time.outputs.formattedTime}}
+#        region: ap-northeast-2
+#        deployment_package: ./mys3study.zip
