--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //mysql connection
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     //s3 설정
 //    implementation "software.amazon.awssdk:s3:2.19.17"
