--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,9 +50,8 @@ jobs:
       - name : Generate deployment package
         run: zip -r ./mys3study.zip .
 
-
       - name: Deploy Consumer to EB
-        user: einaregilsson/beanstalk-deploy@v16
+        uses: einaregilsson/beanstalk-deploy@v16
         with:
           aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
