--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,14 +30,19 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: make application.properties
-        run: |
-          echo ">> mkdir & touch"
-          mkdir -p ./src/main/resources
-          cd ./src/main/resources
-          touch ./application.properties
-          echo ">> copy application.properties"
-          echo "${{ secrets.PROPERTIES }}" >> ./application.properties
+      - uses: actions/checkout@v3
+      - run: touch ./src/main/resources/application.properties
+      - run: echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
+      - run: cat ./src/main/resources/application.properties
+
+#      - name: make application.properties
+#        run: |
+#          echo ">> mkdir & touch"
+#          mkdir -p ./src/main/resources
+#          cd ./src/main/resources
+#          touch ./application.properties
+#          echo ">> copy application.properties"
+#          echo "${{ secrets.PROPERTIES }}" >> ./application.properties
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
