--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,15 @@ jobs:
       - run: echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
       - run: cat ./src/main/resources/application.properties
 
-#      - name: make application.properties
+      - name: Setup MySQL
+        uses: samin/mysql-action@v1
+        with:
+          character set server: 'utf8'
+          mysql database: 'jxxdatabase'
+          mysql user: 'admin'
+          mysql password: ${{ secrets.MYSQL_PASSWORD }}
+
+      #      - name: make application.properties
 #        run: |
 #          echo ">> mkdir & touch"
 #          mkdir -p ./src/main/resources
