--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     compileOnly 'org.projectlombok:lombok'
@@ -31,7 +31,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     //mysql connection
-//    runtimeOnly 'com.mysql:mysql-connector-j'
 
     //s3 설정
 //    implementation "software.amazon.awssdk:s3:2.19.17"
