--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,12 +30,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-#      - uses: actions/checkout@v3
-#      - run: mkdir -p ./src/main/resources
-#      - run: touch ./src/main/resources/application.properties
-#      - run: echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
-#      - run: cat ./src/main/resources/application.properties
-
       - name: make application.properties
         run:
           mkdir ./src/main/resources |
@@ -46,23 +40,6 @@ jobs:
         run: echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
         shell: bash
 
-#      - name: Setup MySQL
-#        uses: samin/mysql-action@v1
-#        with:
-#          character set server: 'utf8'
-#          mysql database: 'jxxdatabase'
-#          mysql user: 'admin'
-#          mysql password: ${{ secrets.MYSQL_PASSWORD }}
-
-      #      - name: make application.properties
-#        run: |
-#          echo ">> mkdir & touch"
-#          mkdir -p ./src/main/resources
-#          cd ./src/main/resources
-#          touch ./application.properties
-#          echo ">> copy application.properties"
-#          echo "${{ secrets.PROPERTIES }}" >> ./application.properties
-
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
@@ -71,16 +48,16 @@ jobs:
         run: ./gradlew clean build
         shell: bash
 
-      - name : Generate deployment package
-        run: zip -r ./mys3study.zip .
-
-      - name: Deploy Consumer to EB
-        uses: einaregilsson/beanstalk-deploy@v16
-        with:
-          aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          application_name: my-java-web
-          environment_name: Myjavaweb-env
-          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
-          region: ap-northeast-2
-          deployment_package: ./mys3study.zip
+#      - name : Generate deployment package
+#        run: zip -r ./mys3study.zip .
+#
+#      - name: Deploy Consumer to EB
+#        uses: einaregilsson/beanstalk-deploy@v16
+#        with:
+#          aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
+#          aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+#          application_name: my-java-web
+#          environment_name: Myjavaweb-env
+#          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
+#          region: ap-northeast-2
+#          deployment_package: ./mys3study.zip
