--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,6 +78,6 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           application_name: my-java-web
           environment_name: javaweb-env-1
-          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
+#          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
           deployment_package: ./mys3study.zip
