--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,26 +48,6 @@ jobs:
         run: ./gradlew clean build
         shell: bash
 
-#      - name: Generate deployment package
-#        run: |
-#          mkdir -p deploy
-#          cp build/libs/*.jar deploy/application.jar
-#          cp Procfile deploy/Procfile
-#          cp -r .ebextensions deploy/.ebextensions
-#          cp -r .platform deploy/.platform
-#          cd deploy && zip -r deploy.zip .
-#
-#      - name: Deploy to EB
-#        uses: einaregilsson/beanstalk-deploy@v14
-#        with:
-#          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          application_name: java-web
-#          environment_name: javaweb-env
-#          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
-#          region: ap-northeast-2
-#          deployment_package: deploy/deploy.zip
-
       - name: Get current time
         uses: 1466587594/get-current-time@v2
         id: current-time
@@ -79,16 +59,36 @@ jobs:
         run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
         shell: bash
 
-      - name : Generate deployment package
-        run: zip -r ./mys3study.zip .
+      - name: Generate deployment package
+        run: |
+          mkdir -p deploy
+          cp build/libs/*.jar deploy/application.jar
+          cp Procfile deploy/Procfile
+          cp -r .ebextensions deploy/.ebextensions
+          cp -r .platform deploy/.platform
+          cd deploy && zip -r deploy.zip .
 
-      - name: Deploy Consumer to EB
+      - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v16
         with:
-          aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          application_name: my-java-web
-          environment_name: javaweb-env-1
-          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: java-web
+          environment_name: java-env
+          version_label: github-action-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
-          deployment_package: ./mys3study.zip
+          deployment_package: deploy/deploy.zip
+
+#      - name : Generate deployment package
+#        run: zip -r ./mys3study.zip .
+#
+#      - name: Deploy Consumer to EB
+#        uses: einaregilsson/beanstalk-deploy@v16
+#        with:
+#          aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
+#          aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+#          application_name: my-java-web
+#          environment_name: javaweb-env-1
+#          version_label : github-action-${{steps.current-time.outputs.formattedTime}}
+#          region: ap-northeast-2
+#          deployment_package: ./mys3study.zip
