github action - CD 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,9 +55,9 @@ jobs:
           format: YYYY-MM-DDTHH-mm-ss
           utcOffset: "+09:00"
 
-      - name: Show Current Time
-        run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
-        shell: bash
+#      - name: Show Current Time
+#        run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
+#        shell: bash
 
       - name: Generate deployment package
         run: |
